# test_hatiko

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml  ТЗ для компании Хатико-техника.txt
admin_panel/: apps.py  models.py  signals.py  utils.py
admin_panel/management/commands/: runbot.py
admin_panel/migrations/: 0001_initial.py  0002_delete_mailing.py
api/: serializers.py  urls.py  views.py
backend/: config.py  settings.py  urls.py
bot/: auth.py  callbacks.py  commands.py  constants.py  keyboards.py  pagination.py  states.py  utils.py
bot/handlers/: __init__.py  start.py
bot/misc/: logging.py  mailing.py
users/: admin.py  apps.py  models.py
users/migrations/: 0001_initial.py
utils/: imei_checker.py  utils.py
